src/test/ui/resolve/issue-5035-2.stderr
error[E0277]: the size for values of type `(dyn I + 'static)` cannot be known at compilation time
  --> $DIR/issue-5035-2.rs:4:8
   |
LL | fn foo(_x: K) {}
   |        ^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `(dyn I + 'static)`
   = help: unsized fn params are gated as an unstable feature
help: function arguments must have a statically known size, borrowed types always have a known size
   |
LL | fn foo(&_x: K) {}
   |        ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
